# ferroque

./: .env.test  Cargo.toml  Dockerfile  Readme  docker-compose.yml  job.json
migrations/: 20260321202754_create_jobs_table.sql  20260325111457_add_notify_trigger.sql
src/: db.rs  errors.rs  lib.rs  main.rs  models.rs  scheduler.rs  worker.rs
src/api/: jobs.rs  middleware.rs  mod.rs
tests/: api_tests.rs
